--- a/app/css/style.css
+++ b/app/css/style.css
@@ -88,7 +88,7 @@ input:focus {
 .warning {
   border: 1px solid #f30202; }
 
-.upd-form-container {
+.form-container {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -98,7 +98,7 @@ input:focus {
   width: 100%;
   height: 100%; }
 
-.upd-form-item {
+.form-item {
   position: absolute;
   left: 50%;
   top: 50%;
@@ -110,4 +110,8 @@ input:focus {
   overflow: hidden;
   border: 1px solid; }
 
+  fieldset {
+    border: 1px solid;
+    padding: 5px;
+  }
 /*# sourceMappingURL=style.css.map */
